[package]
name = "microtest"
version = "0.1.0"
authors = ["Javier L. <135663+xleyba@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
listenfd = "0.3.3"
dotenv = "0.15"
log = "0.4"
env_logger = "0.7.1"
serde = "1.0"
serde_json = "1.0"
